--- a/Changes
+++ b/Changes
@@ -2,6 +2,5 @@ Revision history for Perinci-Sub-DepUtil
 
 0.01     2012-12-21 (SHARYANTO)
 
-         First release (on apocalypse day). Split from Perinci-Util, like
-         Perinci-Sub-PropertyUtil.
-
+         - First release (on apocalypse day). Split from Perinci-Util, like
+           Perinci-Sub-PropertyUtil.
