--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-Sub-DepUtil
 
+0.02     2014-04-27 (SHARYANTO)
+
+         - Adjust to Sah::Schema::Rinci (which replaces Rinci::Schema).
+
+
 0.01     2012-12-21 (SHARYANTO)
 
          - First release (on apocalypse day). Split from Perinci-Util, like
