--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perinci-Sub-DepUtil
 
+0.03    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.02     2014-04-27 (SHARYANTO)
 
          - Adjust to Sah::Schema::Rinci (which replaces Rinci::Schema).
