--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
-0.04    2016-05-10 (PERLANCAR)
+0.04    2016-05-10  Released-By: PERLANCAR
 
 	- Update to Sah::Schema::rinci::function_meta which replaces
 	  Sah::Schema::Rinci.
 
 
-0.03    2015-09-03 (PERLANCAR)
+0.03    2015-09-03  Released-By: PERLANCAR
 
 	- No functional changes.
 
@@ -13,12 +13,12 @@
 	  requirement.
 
 
-0.02     2014-04-27 (SHARYANTO)
+0.02     2014-04-27  Released-By: SHARYANTO
 
          - Adjust to Sah::Schema::Rinci (which replaces Rinci::Schema).
 
 
-0.01     2012-12-21 (SHARYANTO)
+0.01     2012-12-21  Released-By: SHARYANTO
 
          - First release (on apocalypse day). Split from Perinci-Util, like
            Perinci-Sub-PropertyUtil.
